syntax = "proto3";
package jackaldao.canine.storage;

option go_package = "github.com/jackal-dao/canine-chain/x/storage/types";

message ClientUsage {
  string address = 1;
  string usage = 2;
}
